# testHK32_gcc

./: CMakeLists.txt  HK32F030M_FLASH.ld  README.md
Drivers/HK32F030M_Lib/src/: hk32f030m_gpio.c
StartUp/: Startup_hk32f030m_gcc.s
